# prim-batch

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
prim_batch/: __main__.py
