[tool.poetry]
name = "prim-batch"
version = "0.1.0rc1"
description = "Primitive Batch - Running prim-ctrl and prim-sync in batches."
license = "Apache-2.0"
authors = ["Laszlo Magyar <lmagyar1973@gmail.com>"]
readme = "README.md"
repository = "https://github.com/lmagyar/prim-batch"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
packages = [{include = "prim_batch"}]

[tool.poetry.urls]
"Change Log" = "https://github.com/lmagyar/prim-batch/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
prim-batch = "prim_batch.__main__:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
