[tool.poetry]
packages = [{include = "prim_batch"}]

[project]
name = "prim-batch"
version = "0.7.1"
description = "Primitive Batch - Multiplatform Python script for batch execution of prim-ctrl and prim-sync commands."
license = "Apache-2.0"
authors = [
    {name = "Laszlo Magyar", email = "lmagyar1973@gmail.com"}
]
readme = "README.md"
repository = "https://github.com/lmagyar/prim-batch"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12, <4.0"
dependencies = [
    "filelock (>=3.20.0)",
]

[project.urls]
"Change Log" = "https://github.com/lmagyar/prim-batch/blob/main/CHANGELOG.md"

[project.scripts]
prim-batch = "prim_batch.__main__:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
